css/styles.css
/* ========================================
   Reset
   ======================================== */

*, *::before, *::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  background-color: #fff;
}

h1, h2, h3, h4, h5, h6, p {
  margin-top: 0;
  margin-bottom: 0;
}

/* ========================================
   Fonts
   ======================================== */

@font-face {
  font-family: "MonumentGrotesk-Regular";
  src: url("../fonts/MonumentGrotesk-Regular.otf") format("opentype");
}
@font-face {
  font-family: "EditorialNew-Light";
  src: url("../fonts/EditorialNew-Light.otf") format("opentype");
}
@font-face {
  font-family: "Ofform-Regular";
  src: url("../fonts/Ofform-Regular.otf") format("opentype");
}

/* ========================================
   Base Elements
   ======================================== */

body {
  color: black;
  font-family: "MonumentGrotesk-Regular", "Helvetica", sans-serif;
  font-weight: normal;
  font-style: normal;
  text-rendering: optimizeLegibility;
}

a {
  color: black;
  text-decoration: none;
}
a:hover {
  text-decoration: none;
  color: black;
}

h1 {
  font-family: "MonumentGrotesk-Regular", "Helvetica", sans-serif;
  font-size: 12px;
  font-weight: normal;
}
@media screen and (min-width: 820px) {
  h1 {
    font-size: 14px;
  }
}
@media screen and (min-width: 1200px) {
  h1 {
    font-size: 16px;
  }
}

h2 {
  font-family: "MonumentGrotesk-Regular", "Helvetica", sans-serif;
  font-size: 9px;
  font-weight: normal;
  text-transform: uppercase;
  letter-spacing: 0.03rem;
}
@media screen and (min-width: 820px) {
  h2 {
    font-size: 11px;
  }
}
@media screen and (min-width: 1200px) {
  h2 {
    font-size: 12px;
  }
}

h3 {
  font-family: "EditorialNew-Light", "Helvetica", sans-serif;
  font-size: 50px;
  font-weight: normal;
  line-height: 1;
}
@media screen and (min-width: 820px) {
  h3 {
    font-size: 100px;
  }
}
@media screen and (min-width: 1200px) {
  h3 {
    font-size: 160px;
    line-height: 1.1;
  }
}
@media screen and (min-width: 2000px) {
  h3 {
    font-size: 200px;
  }
}

h4 {
  font-family: "EditorialNew-Light", "Helvetica", sans-serif;
  font-weight: normal;
}

h5 {
  font-weight: normal;
  font-size: 14px;
}
@media screen and (min-width: 820px) {
  h5 {
    font-size: 16px;
  }
}
@media screen and (min-width: 1200px) {
  h5 {
    font-size: 20px;
  }
}
@media screen and (min-width: 2000px) {
  h5 {
    font-size: 40px;
  }
}

h6 {
  font-weight: normal;
  font-size: 18px;
}
@media screen and (min-width: 820px) {
  h6 {
    font-size: 24px;
  }
}
@media screen and (min-width: 1200px) {
  h6 {
    font-size: 32px;
  }
}

img {
  max-width: 100%;
}

p {
  font-size: 10px;
  margin-bottom: 0;
}

/* ========================================
   Layout
   ======================================== */

.top-spacing {
  height: 120px;
}

.project-container {
  display: block;
  margin: 30px 30px 120px 30px;
}
@media screen and (min-width: 1500px) {
  .project-container {
    margin: 30px 100px 200px 100px;
  }
}
@media screen and (min-width: 2000px) {
  .project-container {
    margin: 30px 200px 300px 200px;
  }
}

@media screen and (min-width: 1200px) {
  .project-title {
    display: inline;
    position: relative;
  }
}

@media screen and (min-width: 820px) {
  .two-column {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 60px;
  }
}

.thumbnail {
  padding-bottom: 80px;
  margin-top: -24px;
  position: relative;
  z-index: -10;
}
@media screen and (min-width: 820px) {
  .thumbnail {
    margin-top: -50px;
  }
}
@media screen and (min-width: 1200px) {
  .thumbnail {
    display: none;
    padding-bottom: 0;
  }
}

/* ========================================
   Project Page
   ======================================== */

.arrow-right {
  width: 10%;
}

.book-start {
  display: grid;
  grid-template-columns: 1fr 11.75fr;
}

.bottom-space {
  margin-bottom: 60px;
}
@media screen and (min-width: 1200px) {
  .bottom-space {
    margin-bottom: 100px;
  }
}
@media screen and (min-width: 1500px) {
  .bottom-space {
    margin-bottom: 120px;
  }
}
@media screen and (min-width: 2000px) {
  .bottom-space {
    margin-bottom: 300px;
  }
}

.cover {
  margin: -24px 0 0 0;
  position: relative;
  z-index: -10;
}
@media screen and (min-width: 820px) {
  .cover {
    margin-top: -50px;
  }
}
@media screen and (min-width: 1200px) {
  .cover {
    margin-top: -60px;
  }
}
@media screen and (min-width: 2000px) {
  .cover {
    margin-top: -70px;
  }
}

.full-img {
  width: 100%;
}

.padded {
  padding: 0 30px;
}
@media screen and (min-width: 820px) {
  .padded {
    padding: 0 45px;
  }
}
@media screen and (min-width: 1200px) {
  .padded {
    padding: 0 60px;
  }
}
@media screen and (min-width: 1500px) {
  .padded {
    padding: 0 100px;
  }
}
@media screen and (min-width: 2000px) {
  .padded {
    padding: 0 200px;
  }
}

.padded-title {
  padding: 0 0 0 30px;
}
@media screen and (min-width: 1500px) {
  .padded-title {
    padding: 0 0 0 100px;
  }
}
@media screen and (min-width: 2000px) {
  .padded-title {
    padding: 0 0 0 200px;
  }
}

.photo-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

.photo-grid-2 {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 5em;
}

.left-item {
  padding-right: 30px;
}
@media screen and (min-width: 820px) {
  .left-item {
    padding-right: 120px;
  }
}
@media screen and (min-width: 1200px) {
  .left-item {
    padding-right: 200px;
  }
}
@media screen and (min-width: 1500px) {
  .left-item {
    padding-right: 300px;
  }
}
@media screen and (min-width: 2000px) {
  .left-item {
    padding-right: 400px;
  }
}

.right-item {
  padding-left: 30px;
}
@media screen and (min-width: 820px) {
  .right-item {
    padding-left: 120px;
  }
}
@media screen and (min-width: 1200px) {
  .right-item {
    padding-left: 200px;
  }
}
@media screen and (min-width: 1500px) {
  .right-item {
    padding-left: 300px;
  }
}
/* ... */

